--- a/Project/WebContent/css/basic.css
+++ b/Project/WebContent/css/basic.css
@@ -8,7 +8,7 @@
 
 /* 상단영역 */
 #header {position:relative; width:970px; height:140px; margin:auto;}
-#header h1 {width:181px; height:59px; background:url(../img/logo.png) no-repeat; text-indent:-9999px;}
+#header h1 {width:181px; height:59px;}
 #header .gnb {position:absolute; bottom:0; width:100%; height:50px; overflow:hidden;}
 #header .gnb li {float:left; width:194px; height:100%; background:#ffffff; border-top: 1px solid black;}
 #header .gnb li a {display:block; width:auto; height:100%; text-align:center;}
