--- a/Project/WebContent/css/basic.css
+++ b/Project/WebContent/css/basic.css
@@ -7,7 +7,7 @@
 #wrap {width:100%; height:100%; margin:auto;}
 
 /* 상단영역 */
-#header {position:relative; width:970px; height:140px; margin:auto;}
+#header {position:relative; width:970px; height:140px; margin:auto; border-bottom: 1px solid black;}
 #header h1 {width:181px; height:59px;}
 #header .gnb {position:absolute; bottom:0; width:100%; height:50px; overflow:hidden;}
 #header .gnb li {float:left; width:194px; height:100%; background:#ffffff; border-top: 1px solid black;}
@@ -46,8 +46,18 @@ color:#000; font-weight:bold; font-size:16px; padding-left:40px; background:url(
 #footer .copyright {font-size:11px;}
 
 /* 컨텐츠영역 */
-#contents {width:970px; height:auto; margin:auto;}
+#contents {width:970px; height:auto; margin:auto; margin-top: 50px;}
 #contents_sub {width:900px; height:auto; margin:auto; padding-top:30px;}
+#contents_sub div{
+	text-align: center;
+	border: 1px solid black;
+}
+#contents_sub div.gameInfo{
+	height: 35em;
+}
+#contents_sub div.noticeBoard, #contents_sub div.freeBoard{
+	height: 20em;
+}
 .sub_tit {background:url(../img/sub_title.png) no-repeat; text-indent:-9999px;}
 .tit_src {font-size:15px; color:#222; padding-bottom:40px; line-height:1.3em;}
 
