--- a/Project/WebContent/css/basic.css
+++ b/Project/WebContent/css/basic.css
@@ -34,6 +34,73 @@ color:#000; font-weight:bold; font-size:16px; padding-left:40px; background:url(
 }
 
 
+
+
+
+
+
+
+/* /* 조인 버튼 */
+.btn{
+	display: inline-block;
+	background: url("../img/btn.png") no-repeat;
+	text-indent: -9999px;
+}
+.b_bdcheck{
+	width: 60px;
+	height: 25px;
+	background-position: 0 -150px;
+}
+.btn a{
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+input.join{
+	border: 1px solid #ccc;
+	height: 23px;
+	width: 120px;
+	text-indent: 5px;
+} 
+ label.hidden{display: none;}  
+
+
+.btn_center{
+	text-align: center;
+}
+
+
+
+.b_agree{
+	width: 121px;
+	height: 30px;
+	
+}
+
+.b_noagree{
+	width: 121px;
+	height: 30px;
+	
+}
+
+
+.btn1{
+	display: inline-block;
+	background: url("../img/a.PNG") no-repeat;
+	text-indent: -9999px;
+}
+
+.btn2{
+	display: inline-block;
+	background: url("../img/b.PNG") no-repeat;
+	text-indent: -9999px;
+}
+
+ */
+
+
+
+
 /* 푸터영역 */
 #footer {width:auto; padding:40px 0 50px; background:#eee; margin-top:100px;}
 #footer .footer_area{width:900px; margin:auto;}
