--- a/Project/WebContent/css/basic.css
+++ b/Project/WebContent/css/basic.css
@@ -35,13 +35,61 @@ color:#000; font-weight:bold; font-size:16px; padding-left:40px; background:url(
 
 
 
+/* 마이페이지  */
+	#mypagetable, #header h1{
+		margin-top: 10px;
+	}
+	#mypagetable td{
+		padding: 2px;
+		text-align: right;
+	}
+	#mypagetable td a:HOVER{
+		text-decoration: underline;
+	}
+
+	/* 충전 */
+	div#mmm{
+		margin-left: 500px;
+		margin-top: 30px; 
+	
+	}
+
+	div#mmm form{
+		font-size: 19px;
+	}
+	
+	div#mmm label{
+		font-size: 19px;
+		margin-left: 10px;
+	} 
+	
+	div#mmm input[type=text]{
+		width: 100px;
+		height: 24px;
+	}
+	
+	div#mmm input[type=button] {
+		display: inline;
+		width: 70px;
+		height: 27px;
+		margin: 10px auto;
+		font-size: 15px;
+		font-weight: bold;
+		border: 1px solid #dcdcdc;
+		margin-left: 10px;
+	}
+	
+	#aaa{
+		border:0;
+		width:500px;
+		height: 150px;
+		margin-top: 20px;
+	}
+	
 
 
-
-
-
-/* /* 조인 버튼 */
-.btn{
+ /* 조인 버튼 */
+/*.btn{
 	display: inline-block;
 	background: url("../img/btn.png") no-repeat;
 	text-indent: -9999px;
