css(마이페이지) 추가 -준수

--- a/Project/WebContent/css/basic.css
+++ b/Project/WebContent/css/basic.css
@@ -79,12 +79,8 @@ color:#000; font-weight:bold; font-size:16px; padding-left:40px; background:url(
 		margin-left: 10px;
 	}
 	
-	#aaa{
-		border:0;
-		width:500px;
-		height: 150px;
-		margin-top: 20px;
-	}
+	/* 경기구매 */
+	
 	
 
 
