--- a/Project/WebContent/css/basic.css
+++ b/Project/WebContent/css/basic.css
@@ -170,12 +170,17 @@ input.join{
 	height: 20em;
 }
 .gameInfoTable{
-	width: 100%;
+	width: 60%;
 	height: 100%;
+	margin: auto;
 }
 .gameInfoTable td{
 	text-align: center;
 	border: 1px solid black;
+}
+.gameInfoTable b{
+	display:block;
+	margin-top: 5px;
 }
 .sub_tit {background:url(../img/sub_title.png) no-repeat; text-indent:-9999px;}
 .tit_src {font-size:15px; color:#222; padding-bottom:40px; line-height:1.3em;}
