--- a/Project/WebContent/css/basic.css
+++ b/Project/WebContent/css/basic.css
@@ -4,7 +4,7 @@
 /*****************************************************
 기본 레이아웃 
 *****************************************************/
-#wrap {width:100%; height:100%; margin:auto;}
+#wrap {width:100%; }
 
 /* 상단영역 */
 #header {position:relative; width:970px; height:140px; margin:auto; border-bottom: 1px solid black;}
@@ -48,11 +48,11 @@ color:#000; font-weight:bold; font-size:16px; padding-left:40px; background:url(
 	}
 
 	/* 충전 */
-	div#charge{
+	/* div#charge{
 		margin-left: 500px;
 		margin-top: 60px;	
 	}
-	
+	 */
 	div#charge input[type=text]{
 		width: 100px;
 		height: 24px;
@@ -197,3 +197,215 @@ input.join[type=password]:hover {border:1px solid #999; height:22px; background:
 
 .req {display:inline-block; width:12px; height:8px; background:url(../img/bult.png) no-repeat; text-indent:-9999px; margin-left:-12px;}
 .guide_txt {display:block; color:#999; font-size:11px; padding-bottom:7px; line-height:1.3em;}
+
+
+/*******************************************************************
+ 자유게시판 스타일
+ *******************************************************************/
+ div#listdiv {
+	margin:0 auto;
+}
+
+	.t1{width: 5px;  text-align: center; height: 35px; border-right:1px solid #ccc;}
+	.t2{width: 50px;  text-align: center; height: 35px; border-right:1px solid #ccc;}
+	.t3{width: 10px;  text-align: center; height: 35px; border-right:1px solid #ccc;}
+	.t4{width: 30px;  text-align: center; height: 35px; border-right:1px solid #ccc;}
+	.t5{width: 8px;  text-align: center; height: 35px;}
+
+
+
+#listTable{	
+		border:0;
+		width:700px;
+		height: 50px;
+		margin: auto;
+		margin-top: 40px;
+		margin-bottom: 10px;
+}
+
+#listTable thead tr{
+	height:10px;
+}	
+
+#page{
+	margin: auto; 
+	/* margin-left: 440px; */
+	display: inline-block; 
+}
+
+#boardmove{
+
+	margin: 0 auto;
+	width: 700px;
+}
+
+
+#write_btn{
+	/* margin-top: 5px; */
+	/* margin: auto; */
+	margin-left: 630px; 
+	display: inline-block;
+	
+}
+
+div#write_btn input[type=button]{
+		width: 68px;
+		height: 27px;
+		font-size: 15px;
+		font-weight: bold;
+		border: 1px solid #dcdcdc;
+}
+.a1{
+	background: #F6F6F6; 
+	text-align: center; 
+	border-right:1px solid #FFFFFF; 
+	border-bottom:1px solid #FFFFFF;
+	height: 40px;
+}
+
+#a{
+display: none;
+}
+
+.a1 a:HOVER{
+	text-decoration: underline;
+}
+
+
+/************************ 
+	마이페이지
+****************************/
+
+
+/* 충전 css*/
+
+#charge{
+	margin:auto;
+	margin-top: 50px;
+}
+
+#chargetable{
+	width: 500px;
+	border:2px solid #4C4C4C;
+	margin: auto;
+}
+
+#user{
+	text-align: center;
+	font-size: 13px;
+	font-weight: bold;
+}
+
+#coin{
+	text-align: center;
+	font-size: 13px;
+	font-weight: bold;
+}
+
+
+/* 구매페이지 css */
+	
+
+	#buy{
+		margin:0 auto;
+	}
+
+	#buytable{
+		margin: 0 auto;
+	/* 	margin-top: 30px; */
+		padding-top: 20px;
+		border:0;
+		width:700px;
+		height: 50px;
+	}
+
+	#t1{width: 20px;  text-align: center; height: 35px; border-right:1px solid #ccc;}
+	#t2{width: 20px;  text-align: center; height: 35px; border-right:1px solid #ccc;}
+	#t3{width: 20px;  text-align: center; height: 35px; border-right:1px solid #ccc;}
+	#t4{width: 20px;  text-align: center; height: 35px; border-right:1px solid #ccc;}
+	#t5{width: 20px;  text-align: center; height: 35px; border-right:1px solid #ccc;}
+	#t6{width: 20px;  text-align: center; height: 35px; border-right:1px solid #ccc;}
+	#t7{width: 20px;  text-align: center; height: 35px; }
+	
+	
+	#hide{
+		display: none;
+	}
+		
+	#bat{
+		background: #F6F6F6; 
+		text-align: center; 
+		border-right:1px solid #FFFFFF; 
+		border-bottom:1px solid #FFFFFF;
+		height: 30px;
+	}
+	
+	#bat input[type=button]{
+		display: inline;
+		width: 35px;
+		height: 20px;
+		font-size: 13px;
+		font-weight: bold;
+		border: 1px solid #dcdcdc;
+		color: #000000;
+		background-color: #B8B8B8;
+	}
+	
+	#boardmove{
+		margin: 0 auto;
+		width: 700px;
+	}
+	
+	#page{
+		margin: auto;
+		margin-top: 10px;
+	}
+	
+	/* 회원css */
+	
+	#mem_left{
+		border: 1px solid red;
+		display: inline-block;
+		margin: auto;
+		height: 100px;
+		width: 100px;
+		
+	}
+	
+	#mem_info{
+		border: 1px solid blue;
+		width:100px;
+		height: 100px;
+		margin-left: 200px;
+	}
+	
+	#mem_info tbody tr td{
+		font-size:12pt;
+		color:#191919;
+		text-align: center;
+		font-weight: bold;
+		background-color: #D8D8D8;
+		}
+
+	#mem_info thead tr th{
+		font-size:12pt;
+		font-weight:bold;
+		color:#FFFFFF; 
+		background-color:#5D5D5D;
+		text-align: center;
+	}
+	
+	#user_edit{
+		width: 20px;
+	}
+	
+	#edituser{
+		border-bottom: 1px solid #FFFFFF; 
+	}
+	
+	#edituser a:HOVER{
+		text-decoration: underline;
+		font-size: 15px;
+	}	
+
+
